// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaRegisterApi integration test 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0ArtifactHashAD6FCE70": Object {
      "Description": "Artifact hash for asset \\"277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0\\"",
      "Type": "String",
    },
    "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3BucketF29106FA": Object {
      "Description": "S3 bucket for asset \\"277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0\\"",
      "Type": "String",
    },
    "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3VersionKeyBC130A4E": Object {
      "Description": "S3 key for asset version \\"277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0\\"",
      "Type": "String",
    },
    "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06ArtifactHash26E05057": Object {
      "Description": "Artifact hash for asset \\"48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06\\"",
      "Type": "String",
    },
    "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3BucketF2E41DD5": Object {
      "Description": "S3 bucket for asset \\"48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06\\"",
      "Type": "String",
    },
    "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3VersionKey68BD8E40": Object {
      "Description": "S3 key for asset version \\"48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06\\"",
      "Type": "String",
    },
    "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0ArtifactHashAEE83902": Object {
      "Description": "Artifact hash for asset \\"ac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0\\"",
      "Type": "String",
    },
    "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3BucketA2356DC4": Object {
      "Description": "S3 bucket for asset \\"ac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0\\"",
      "Type": "String",
    },
    "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3VersionKey4A744D14": Object {
      "Description": "S3 key for asset version \\"ac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0\\"",
      "Type": "String",
    },
    "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aArtifactHash4C33387B": Object {
      "Description": "Artifact hash for asset \\"c100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715a\\"",
      "Type": "String",
    },
    "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3Bucket8F6CE372": Object {
      "Description": "S3 bucket for asset \\"c100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715a\\"",
      "Type": "String",
    },
    "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3VersionKeyB665BA62": Object {
      "Description": "S3 key for asset version \\"c100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715a\\"",
      "Type": "String",
    },
    "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eArtifactHash7A8AA2DB": Object {
      "Description": "Artifact hash for asset \\"cfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321e\\"",
      "Type": "String",
    },
    "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3Bucket9126E9FB": Object {
      "Description": "S3 bucket for asset \\"cfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321e\\"",
      "Type": "String",
    },
    "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3VersionKey0737FDE3": Object {
      "Description": "S3 key for asset version \\"cfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321e\\"",
      "Type": "String",
    },
    "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aArtifactHashB506A77A": Object {
      "Description": "Artifact hash for asset \\"d28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6a\\"",
      "Type": "String",
    },
    "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3Bucket33FAF88A": Object {
      "Description": "S3 bucket for asset \\"d28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6a\\"",
      "Type": "String",
    },
    "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3VersionKey2DB08401": Object {
      "Description": "S3 key for asset version \\"d28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6a\\"",
      "Type": "String",
    },
    "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abArtifactHashAA1EF390": Object {
      "Description": "Artifact hash for asset \\"fedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586ab\\"",
      "Type": "String",
    },
    "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3BucketA0B10D5C": Object {
      "Description": "S3 bucket for asset \\"fedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586ab\\"",
      "Type": "String",
    },
    "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3VersionKey858F2908": Object {
      "Description": "S3 key for asset version \\"fedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586ab\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcase31F47ABD": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRoleDefaultPolicyBB8EFFC9",
        "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3BucketA0B10D5C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3VersionKey858F2908",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3VersionKey858F2908",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "DEIVCE_ACTIVATOR_QUEUE_URL": Object {
              "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
            },
            "DEIVCE_ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseDeviceActivatorQueuePushingRoletestcase992A489E",
                "Arn",
              ],
            },
            "test_verifier": Object {
              "Fn::ImportValue": "verifier-stack:ExportsOutputFnGetAtttestcase9BC7DE4DArn30A02383",
            },
          },
        },
        "Handler": "app.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseC10EDBA7": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:RegisterCACertificate",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseC10EDBA7",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRoleDefaultPolicyBB8EFFC9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRoleDefaultPolicyBB8EFFC9",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcase40A8FB69": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleDefaultPolicyECFFE568",
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3BucketF2E41DD5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3VersionKey68BD8E40",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3VersionKey68BD8E40",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseDeviceActivationFunctionPolicytestcase9CFD7A1E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iot:UpdateCertificate",
                "iot:DescribeCertificate",
                "iot:DescribeCACertificate",
                "iot:ListTagsForResource",
                "lambda:InvokeFunction",
                "lambda:InvokeAsync",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseDeviceActivationFunctionPolicytestcase9CFD7A1E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleDefaultPolicyECFFE568": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleDefaultPolicyECFFE568",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseSqsEventSourceteststackJustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcase3762877BC6E3384B": Object {
      "Properties": Object {
        "BatchSize": 1,
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcase40A8FB69",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseDeviceActivatorQueuePushingRoletestcase992A489E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "DeviceActivatorQueuePushingRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseTopicRuletestcase2533AFC3": Object {
      "Properties": Object {
        "TopicRulePayload": Object {
          "Actions": Array [
            Object {
              "Sqs": Object {
                "QueueUrl": Object {
                  "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
                },
                "RoleArn": Object {
                  "Fn::GetAtt": Array [
                    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseDeviceActivatorQueuePushingRoletestcase992A489E",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Sql": "SELECT * FROM '$aws/events/certificates/registered/#'",
        },
      },
      "Type": "AWS::IoT::TopicRule",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseC1A68FD4": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy0E0E793C",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3BucketF29106FA",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3VersionKeyBC130A4E",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3VersionKeyBC130A4E",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy0E0E793C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy0E0E793C",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcaseServiceRole3B5AB04D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3BucketA2356DC4",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3VersionKey4A744D14",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3VersionKey4A744D14",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "test_verifier": Object {
              "Fn::ImportValue": "verifier-stack:ExportsOutputFnGetAtttestcase9BC7DE4DArn30A02383",
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcaseServiceRole3B5AB04D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcaseServiceRole3B5AB04D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcase70277BBF": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyD85BC71E",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3Bucket8F6CE372",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3VersionKeyB665BA62",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3VersionKeyB665BA62",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyD85BC71E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyD85BC71E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseBBEB86C0": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy215E7024",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3Bucket9126E9FB",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3VersionKey0737FDE3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3VersionKey0737FDE3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy215E7024": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy215E7024",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcase715567F0": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyA4BC6E8F",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3Bucket33FAF88A",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3VersionKey2DB08401",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3VersionKey2DB08401",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyA4BC6E8F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyA4BC6E8F",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`CaRegisterApi integration test with no verifiers provided 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0ArtifactHashAD6FCE70": Object {
      "Description": "Artifact hash for asset \\"277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0\\"",
      "Type": "String",
    },
    "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3BucketF29106FA": Object {
      "Description": "S3 bucket for asset \\"277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0\\"",
      "Type": "String",
    },
    "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3VersionKeyBC130A4E": Object {
      "Description": "S3 key for asset version \\"277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0\\"",
      "Type": "String",
    },
    "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06ArtifactHash26E05057": Object {
      "Description": "Artifact hash for asset \\"48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06\\"",
      "Type": "String",
    },
    "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3BucketF2E41DD5": Object {
      "Description": "S3 bucket for asset \\"48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06\\"",
      "Type": "String",
    },
    "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3VersionKey68BD8E40": Object {
      "Description": "S3 key for asset version \\"48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06\\"",
      "Type": "String",
    },
    "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0ArtifactHashAEE83902": Object {
      "Description": "Artifact hash for asset \\"ac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0\\"",
      "Type": "String",
    },
    "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3BucketA2356DC4": Object {
      "Description": "S3 bucket for asset \\"ac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0\\"",
      "Type": "String",
    },
    "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3VersionKey4A744D14": Object {
      "Description": "S3 key for asset version \\"ac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0\\"",
      "Type": "String",
    },
    "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aArtifactHash4C33387B": Object {
      "Description": "Artifact hash for asset \\"c100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715a\\"",
      "Type": "String",
    },
    "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3Bucket8F6CE372": Object {
      "Description": "S3 bucket for asset \\"c100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715a\\"",
      "Type": "String",
    },
    "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3VersionKeyB665BA62": Object {
      "Description": "S3 key for asset version \\"c100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715a\\"",
      "Type": "String",
    },
    "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eArtifactHash7A8AA2DB": Object {
      "Description": "Artifact hash for asset \\"cfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321e\\"",
      "Type": "String",
    },
    "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3Bucket9126E9FB": Object {
      "Description": "S3 bucket for asset \\"cfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321e\\"",
      "Type": "String",
    },
    "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3VersionKey0737FDE3": Object {
      "Description": "S3 key for asset version \\"cfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321e\\"",
      "Type": "String",
    },
    "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aArtifactHashB506A77A": Object {
      "Description": "Artifact hash for asset \\"d28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6a\\"",
      "Type": "String",
    },
    "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3Bucket33FAF88A": Object {
      "Description": "S3 bucket for asset \\"d28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6a\\"",
      "Type": "String",
    },
    "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3VersionKey2DB08401": Object {
      "Description": "S3 key for asset version \\"d28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6a\\"",
      "Type": "String",
    },
    "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abArtifactHashAA1EF390": Object {
      "Description": "Artifact hash for asset \\"fedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586ab\\"",
      "Type": "String",
    },
    "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3BucketA0B10D5C": Object {
      "Description": "S3 bucket for asset \\"fedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586ab\\"",
      "Type": "String",
    },
    "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3VersionKey858F2908": Object {
      "Description": "S3 key for asset version \\"fedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586ab\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcase31F47ABD": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRoleDefaultPolicyBB8EFFC9",
        "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3BucketA0B10D5C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3VersionKey858F2908",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersfedfeb47f812fee12beecaea8dd31c449210478fda7396895419a3f6857586abS3VersionKey858F2908",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "DEIVCE_ACTIVATOR_QUEUE_URL": Object {
              "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
            },
            "DEIVCE_ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseDeviceActivatorQueuePushingRoletestcase992A489E",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseC10EDBA7": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:RegisterCACertificate",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseC10EDBA7",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRoleDefaultPolicyBB8EFFC9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRoleDefaultPolicyBB8EFFC9",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistrationFunctiontestcaseServiceRole39F787B4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcase40A8FB69": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleDefaultPolicyECFFE568",
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3BucketF2E41DD5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3VersionKey68BD8E40",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters48c13740e7a5043e54855219773a15bc8914ed9d5251d1f9602f651bf1b6ca06S3VersionKey68BD8E40",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseDeviceActivationFunctionPolicytestcase9CFD7A1E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iot:UpdateCertificate",
                "iot:DescribeCertificate",
                "iot:DescribeCACertificate",
                "iot:ListTagsForResource",
                "lambda:InvokeFunction",
                "lambda:InvokeAsync",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "stInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseDeviceActivationFunctionPolicytestcase9CFD7A1E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleDefaultPolicyECFFE568": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleDefaultPolicyECFFE568",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseServiceRoleE9E59A5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcaseSqsEventSourceteststackJustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcase3762877BC6E3384B": Object {
      "Properties": Object {
        "BatchSize": 1,
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorFunctiontestcase40A8FB69",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseDeviceActivatorQueuePushingRoletestcase992A489E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "DeviceActivatorQueuePushingRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseTopicRuletestcase2533AFC3": Object {
      "Properties": Object {
        "TopicRulePayload": Object {
          "Actions": Array [
            Object {
              "Sqs": Object {
                "QueueUrl": Object {
                  "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseBEFBD5B9",
                },
                "RoleArn": Object {
                  "Fn::GetAtt": Array [
                    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseDeviceActivatorQueuetestcaseDeviceActivatorQueuePushingRoletestcase992A489E",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Sql": "SELECT * FROM '$aws/events/certificates/registered/#'",
        },
      },
      "Type": "AWS::IoT::TopicRule",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseC1A68FD4": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy0E0E793C",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3BucketF29106FA",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3VersionKeyBC130A4E",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters277bdcde07734b845a59175e6672461710934d11aafc4978e9c8478867fd5dd0S3VersionKeyBC130A4E",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy0E0E793C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy0E0E793C",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseDeleteOneVerifierHttpFunctiontestcaseServiceRole4DEE5CA2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcaseServiceRole3B5AB04D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3BucketA2356DC4",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3VersionKey4A744D14",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersac48bf1020b5fd2ee16b5fc7b4e93c343de05bdc3d701c57800b63de65927eb0S3VersionKey4A744D14",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcaseServiceRole3B5AB04D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcaseServiceRole3B5AB04D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcase70277BBF": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyD85BC71E",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3Bucket8F6CE372",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3VersionKeyB665BA62",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc100e63e879b0770b65eef4c226fdec11836f1b07558c2ebb9a56e355bf2715aS3VersionKeyB665BA62",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyD85BC71E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyD85BC71E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierHttpFunctiontestcaseServiceRoleA0E15E2B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseBBEB86C0": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy215E7024",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3Bucket9126E9FB",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3VersionKey0737FDE3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterscfb97cb494f40e3529528fc61cf9ec9598184d1d25711c3ccc7a095ecaa6321eS3VersionKey0737FDE3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy215E7024": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicy215E7024",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetOneVerifierHttpFunctiontestcaseServiceRoleA44A1426",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcase715567F0": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyA4BC6E8F",
        "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3Bucket33FAF88A",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3VersionKey2DB08401",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd28f647d1807785a42d5a105e4bf8bfe207bc051f96e86b44a27ae4b377bcf6aS3VersionKey2DB08401",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "GET_ALL_VERIFIER_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                "Arn",
              ],
            },
          },
        },
        "Handler": "app.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyA4BC6E8F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseVerifierRecordertestcaseGetAllVerifierFunctiontestcase8FAEBE95",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleDefaultPolicyA4BC6E8F",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseVerifierRecordertestcaseWriteOneVerifierHttpFunctiontestcaseServiceRoleAC286BA9",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
